feat: Create clusterbulb-monitor namespace
Add a new namespace for clusterbulb monitoring

--- a/clusterbulb-deployment.yaml
+++ b/clusterbulb-deployment.yaml
@@ -1,3 +1,8 @@
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: clusterbulb-monitor
+---
 # service-account.yaml
 apiVersion: v1
 kind: ServiceAccount
